# energy-grid-balancer

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: __init__.py  app.py  energy_grid_environment.py  requirements.txt
static/: index.html
